[tool.poetry]
name = "evdspy"
homepage = "https://github.com/SermetPekin/evdspy-repo"
documentation = "https://github.com/SermetPekin/evdspy-repo"
version = "1.0.17.6rc2A"
description = "Get data from EVDS API and organize your local work environment with systematical approach. Using caching facility, this package makes less request from the server."
authors = ["Sermet Pekin <sermet.pekin@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]



[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
rich = "^12.5.1"
requests = "^2.28.1"





[tool.poetry.extras]
jupyter = ["ipywidgets"]

[tool.poetry.dev-dependencies]
pygments = "^2.6.0"
commonmark = "^0.9.0"
typing-extensions = { version = ">=4.0.0, <5.0", python = "<3.9" }
pytest = "^7.0.0"
black = "^22.6"
mypy = "^0.971"
pytest-cov = "^3.0.0"
attrs = "^21.4.0"
types-dataclasses = "^0.6.4"
pre-commit = "^2.17.0"
asv = "^0.5.1"







[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
